samples/_failures_safe/1761800570_53e162_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b4e29d20.c: In function ‘main’:
./samples/SAFE/__tmp_b4e29d20.c:160:5: error: expected declaration or statement at end of input
  160 |     return 0;
      |     ^~~~~~
